--- a/Iyby/pages/sbuy/buy.wxss
+++ b/Iyby/pages/sbuy/buy.wxss
@@ -3,7 +3,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100%;
+  height: 10%;
+  position:relative; 
 }
 
 .header-bg {
@@ -14,7 +15,7 @@
 }
 
 .book-content {
-  margin-top: 90rpx;
+  /* margin-top: 90rpx; */
 }
 
 .search-bar {
@@ -102,7 +103,7 @@
 }
 
 .weui-icon-search_in-box{
-  position: absolute;
+  position: fixed;
   top: 40rpx;
   left: 40rpx;
   z-index: 1;
@@ -125,4 +126,85 @@
   background-color: #fff;
   margin-top: 15px;
   padding: 15px;
+}
+
+
+/* 滑动的样式 */
+.tab{
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+}
+.tab-nav{
+	height: 80rpx;
+	background: #fff;
+	border-bottom: 1rpx solid #ddd;
+	display: flex;
+	line-height: 79rpx;
+	position: relative;
+  
+}
+.tab-nav text{
+	display: block;
+	flex: 1;
+	text-align: center;
+	width: 25%;
+}
+.tab-nav text.active{
+	color: #2e9c60;
+}
+.tab-line{
+	position: absolute;
+	left: 0;
+	bottom: -1rpx;
+	height: 4rpx;
+	background: #2e9c60;
+	transition: all 0.3s;
+}
+.tab-content{
+	width: 400%;
+	height: 100%;
+	overflow: hidden;
+	display: flex;
+}
+.tab-content .tab-panel{
+	height: 100%;
+	overflow-y: auto;
+	overflow-x: hidden;
+	flex: 1;
+	/* flex: 0 0 20%; */
+}
+.test-list{
+	padding: 0 20rpx;
+}
+.question-list{
+	padding: 20rpx;
+}
+.test-item{
+	border-bottom: 1rpx solid #ddd;
+	padding: 20rpx 0;
+}
+.test-item-t{
+	font-size: 34rpx;
+}
+.test-item-b{
+	font-size: 30rpx;
+	color: #888;
+	display: -webkit-box;
+	-webkit-line-clamp: 2;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	-webkit-box-orient: vertical;
+}
+
+.container {
+	flex: 1;
+  	display: flex;
+  	flex-direction: column;
+ 	box-sizing: border-box;
+}
+.container-body{
+	flex: 1;
+	overflow-y: auto;
+	overflow-x: hidden;
 }
