--- a/Iyby/pages/sbuy/buy.wxml
+++ b/Iyby/pages/sbuy/buy.wxml
@@ -25,8 +25,8 @@
               <view wx:for="{{carts}}" wx:key="{{index}}" bindtap='navigatordetails' data-aid="{{item.Id}}">
                 <view class="book-list">
                   <view class="book-image">
-                    <image src="{{item.PicturePath}}"></image>
-                    <view>{{item.PicturePath}}</view>
+                    <image src="http://localhost:49590/{{item.PicturePath}}"></image>
+                    
                   </view>
                   <view class="book-info">
                     <view class="book-info-style">
@@ -49,8 +49,8 @@
             <view wx:for="{{carts}}" wx:key="{{index}}" bindtap='navigatordetails' data-aid="{{item.Id}}">
               <view class="book-list">
                 <view class="book-image">
-                  <image src="{{item.PicturePath}}"></image>
-                  <view>{{item.PicturePath}}</view>
+                  <image src="http://localhost:49590/{{item.PicturePath}}"></image>
+                  
                 </view>
                 <view class="book-info">
                   <view class="book-info-style">
@@ -73,8 +73,8 @@
               <view wx:for="{{carts}}" wx:key="{{index}}" bindtap='navigatordetails' data-aid="{{item.Id}}">
                 <view class="book-list">
                   <view class="book-image">
-                    <image src="{{item.PicturePath}}"></image>
-                    <view>{{item.PicturePath}}</view>
+                    <image src="http://localhost:49590/{{item.PicturePath}}"></image>
+                   
                   </view>
                   <view class="book-info">
                     <view class="book-info-style">
@@ -97,8 +97,8 @@
             <view wx:for="{{carts}}" wx:key="{{index}}" bindtap='navigatordetails' data-aid="{{item.Id}}">
               <view class="book-list">
                 <view class="book-image">
-                  <image src="{{item.PicturePath}}"></image>
-                  <view>{{item.PicturePath}}</view>
+                  <image src="http://localhost:49590/{{item.PicturePath}}"></image>
+                  
                 </view>
                 <view class="book-info">
                   <view class="book-info-style">
@@ -121,8 +121,8 @@
             <view wx:for="{{carts}}" wx:key="{{index}}" bindtap='navigatordetails' data-aid="{{item.Id}}">
               <view class="book-list">
                 <view class="book-image">
-                  <image src="{{item.PicturePath}}"></image>
-                  <view>{{item.PicturePath}}</view>
+                  <image src="http://localhost:49590/{{item.PicturePath}}"></image>
+                  
                 </view>
                 <view class="book-info">
                   <view class="book-info-style">
