--- a/Iyby/pages/zparticulars/particulars.wxss
+++ b/Iyby/pages/zparticulars/particulars.wxss
@@ -37,16 +37,16 @@
 }
 
 .book-info {
-  background-color: #fff;
+  /* background-color: #fff; */
   flex: 0 0 66%;
   box-sizing: border-box;
-  height: 242rpx;
+  /* height: 242rpx; */
   margin-left: 20rpx;
 }
 
 .book-info-style {
-  height: 244rpx;
-  background-color: white;
+  /* height: 244rpx;
+  background-color: white; */
 }
 
 .book-info-style view {
@@ -58,4 +58,65 @@
   overflow: hidden;
   white-space: nowrap;
   margin-top: 8rpx;
+}
+
+/* 滑动的样式 */
+.tab{
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+}
+
+.tab-nav{
+	height: 80rpx;
+	background: #fff;
+	border-bottom: 1rpx solid #ddd;
+	display: flex;
+	line-height: 79rpx;
+	position: relative;
+  
+}
+.tab-nav text{
+	display: block;
+	flex: 1;
+	text-align: center;
+	width: 25%;
+}
+.tab-nav text.active{
+	color: #2e9c60;
+}
+
+.container {
+	flex: 1;
+  	display: flex;
+  	flex-direction: column;
+ 	box-sizing: border-box;
+}
+.container-body{
+	flex: 1;
+	overflow-y: auto;
+	overflow-x: hidden;
+}
+
+
+.tab-content{
+	width: 200%;
+	height: 100%;
+	overflow: hidden;
+	display: flex;
+}
+.tab-content .tab-panel{
+	height: 100%;
+	overflow-y: auto;
+	overflow-x: hidden;
+	flex: 1;
+	/* flex: 0 0 20%; */
+}
+.tab-line{
+	position: absolute;
+	left: 0;
+	bottom: -1rpx;
+	height: 4rpx;
+	background: #2e9c60;
+	transition: all 0.3s;
 }
