--- a/Iyby/pages/qaleadyentering/aleadyentering.wxml
+++ b/Iyby/pages/qaleadyentering/aleadyentering.wxml
@@ -1,45 +1,145 @@
-<!--pages/qaleadyentering/aleadyentering.wxml-->
+      <!-- 搜索框 -->
+      <!-- <view class="content" scroll-y="true">
+        <view class="search-bar">
+          <icon class="weui-icon-search_in-box" type="search" size="14"></icon>
+          <input placeholder="请输入书名" bindchange="inputChange"/>
+          <button type="primary" bindtap="queryBooks">查詢</button>
+        </view>
+      </view> -->
 
-<!--<view class="weui-search-bar">
-    <view class="weui-search-bar__form">
-        <view class="weui-search-bar__box">
-            <icon class="weui-icon-search_in-box" type="search" size="14"></icon>
-            <input type="text" class="weui-search-bar__input" placeholder="搜索" />
-            <view class="weui-icon-clear" wx:if="{{inputVal.length > 0}}" bindtap="clearInput">
-                <icon type="clear" size="14"></icon>
+<view class="container">
+	<view class="container-body">
+		<view class="tab">
+
+      <!-- 滑动列表头 -->
+			<view class="tab-nav">
+				<text wx:for="{{tabnav.tabitem}}" bindtap="setTab" class="{{showtab==index?'active':''}}" data-tabindex="{{index}}" data-type="{{item.type}}" wx:key="{{item.type}}">{{item.text}}</text>
+				<view class="tab-line" style="width:{{100/tabnav.tabnum}}%;transform:translateX({{100*showtab}}%);"></view>
+			</view>
+
+      <!-- 滑动列表体 -->
+			<view class="tab-content" style="" bindtouchstart="scrollTouchstart" bindtouchmove="scrollTouchmove" bindtouchend="scrollTouchend" style="width: {{tabnav.tabnum*100}}%;transform:translateX(-{{showtab*100/tabnav.tabnum}}%);margin-left: {{marginleft}}px;">
+				<view class="tab-panel">
+					<view class="test-list">
+              <view class="book-content">
+              <view wx:for="{{carts}}" wx:key="{{index}}" bindtap='navigatordetails' data-aid="{{item.Id}}">
+                <view class="book-list">
+                  <view class="book-image">
+                    <image src="http://localhost:49590/{{item.PicturePath}}"></image>
+                    
+                  </view>
+                  <view class="book-info">
+                    <view class="book-info-style">
+                      <view>书名：{{item.BooksName}}</view>
+                      <view>作者：{{item.Author}}\n</view>
+                      <view>价格：￥{{item.Price}}\n</view>
+                      <view>出版社信息：{{item.Message}}\n</view>
+                      <view>预约的数量：{{item.LendNum}}\n</view>
+                    </view>
+                  </view>
+                </view>
+                <view class="line"></view>
+              </view>
             </view>
-        </view>
-        <label class="weui-search-bar__label" hidden="{{inputShowed}}" bindtap="showInput">
-            <icon class="weui-icon-search" type="search" size="14"></icon>
-            <view class="weui-search-bar__text">搜索</view>
-        </label>
-    </view>
-    <view class="weui-search-bar__cancel-btn" hidden="{{!inputShowed}}" bindtap="hideInput">取消</view>
-</view>-->
-<view class="content" scroll-y="true">
-  <view class="search-bar">
-    <icon class="weui-icon-search_in-box" type="search" size="14"></icon>
-    <input placeholder="请输入书名" bindchange="inputChange"/>
-    <button type="primary" bindtap="queryBooks">查詢</button>
-  </view>
-  <view class="header-bg"></view>
-  <view class="book-content">
-    <view wx:for="{{bookList}}" wx:key="ISBN13" id="{{item.isbn13}}" data-qty="{{item.qty}}" bindtap="goToDetailPage">
-      <view class="book-list">
-        <view class="book-image">
-          <image src="{{item.image}}" mode="aspectFit"></image>
-        </view>
-        <view class="book-info">
-          <view class="book-info-style">
-            <view>书名:{{item.title}}</view>
-            <view>作者:{{item.author}}\n</view>
-            <view>价格:{{item.price}}\n</view>
-            <view>出版信息:{{item.publisher}}\n</view>
-            <view>可借数量:{{item.qty}}\n</view>
+					</view>
+				</view>
+				<view class="tab-panel">
+					<view class="test-list">
+            <view class="book-content">
+            <view wx:for="{{carts}}" wx:key="{{index}}" bindtap='navigatordetails' data-aid="{{item.Id}}">
+              <view class="book-list">
+                <view class="book-image">
+                  <image src="http://localhost:49590/{{item.PicturePath}}"></image>
+                  
+                </view>
+                <view class="book-info">
+                  <view class="book-info-style">
+                    <view>书名：{{item.BooksName}}</view>
+                    <view>作者：{{item.Author}}\n</view>
+                    <view>价格：￥{{item.Price}}\n</view>
+                    <view>出版社信息：{{item.Message}}\n</view>
+                    <view>预约的数量：{{item.LendNum}}\n</view>
+                  </view>
+                </view>
+              </view>
+              <view class="line"></view>
+            </view>
           </view>
-        </view>
-      </view>
-      <view class="line"></view>
-    </view>
-  </view>
+					</view>
+				</view>
+				<view class="tab-panel">
+					<view class="test-list">
+						  <view class="book-content">
+              <view wx:for="{{carts}}" wx:key="{{index}}" bindtap='navigatordetails' data-aid="{{item.Id}}">
+                <view class="book-list">
+                  <view class="book-image">
+                    <image src="http://localhost:49590/{{item.PicturePath}}"></image>
+                   
+                  </view>
+                  <view class="book-info">
+                    <view class="book-info-style">
+                      <view>书名：{{item.BooksName}}</view>
+                      <view>作者：{{item.Author}}\n</view>
+                      <view>价格：￥{{item.Price}}\n</view>
+                      <view>出版社信息：{{item.Message}}\n</view>
+                      <view>预约的数量：{{item.LendNum}}\n</view>
+                    </view>
+                  </view>
+                </view>
+                <view class="line"></view>
+              </view>
+            </view>
+					</view>
+				</view>
+				<view class="tab-panel">
+					<view class="test-list">
+					  <view class="book-content">
+            <view wx:for="{{carts}}" wx:key="{{index}}" bindtap='navigatordetails' data-aid="{{item.Id}}">
+              <view class="book-list">
+                <view class="book-image">
+                  <image src="http://localhost:49590/{{item.PicturePath}}"></image>
+                  
+                </view>
+                <view class="book-info">
+                  <view class="book-info-style">
+                    <view>书名：{{item.BooksName}}</view>
+                    <view>作者：{{item.Author}}\n</view>
+                    <view>价格：￥{{item.Price}}\n</view>
+                    <view>出版社信息：{{item.Message}}\n</view>
+                    <view>预约的数量：{{item.LendNum}}\n</view>
+                  </view>
+                </view>
+              </view>
+              <view class="line"></view>
+            </view>
+          </view>
+					</view>
+				</view>
+				<view class="tab-panel">
+					<view class="test-list">
+					  <view class="book-content">
+            <view wx:for="{{carts}}" wx:key="{{index}}" bindtap='navigatordetails' data-aid="{{item.Id}}">
+              <view class="book-list">
+                <view class="book-image">
+                  <image src="http://localhost:49590/{{item.PicturePath}}"></image>
+                  
+                </view>
+                <view class="book-info">
+                  <view class="book-info-style">
+                    <view>书名：{{item.BooksName}}</view>
+                    <view>作者：{{item.Author}}\n</view>
+                    <view>价格：￥{{item.Price}}\n</view>
+                    <view>出版社信息：{{item.Message}}\n</view>
+                    <view>预约的数量：{{item.LendNum}}\n</view>
+                  </view>
+                </view>
+              </view>
+              <view class="line"></view>
+            </view>
+          </view>
+					</view>
+				</view>
+			</view>
+		</view>
+	</view>
 </view>
