--- a/Iyby/pages/zparticulars/particulars.wxml
+++ b/Iyby/pages/zparticulars/particulars.wxml
@@ -99,7 +99,7 @@
 		</view>
 	</view>
 </view>
-
+<!-- 
   <view class="footer">
     <button class="footer-add" formType="delivery_is_default" bindtap="bindbtn">保存</button>
-  </view>
+  </view> -->
