--- a/Iyby/pages/zparticulars/particulars.wxml
+++ b/Iyby/pages/zparticulars/particulars.wxml
@@ -1,41 +1,38 @@
-<!--pages/zparticulars/particulars.wxml-->
-  <!-- <view class="cart-list1" wx:for="{{carts}}" wx:key="{{index}}" bindtap='navigatordetails' data-aid="{{item.Id}}">
-      <text class="inforleft">书名：</text><text class="inforright">{{item.BooksName}}\n</text>
-      <text class="inforleft">作者：</text><text class="inforright">{{item.Author}}\n</text>
-      <text class="inforleft">价格：￥</text><text class="inforright">{{item.Price}}\n</text>
-      <text class="inforleft">出版社信息：</text><text class="inforright">{{item.Message}}\n</text>
-      <text class="inforleft">预约的数量：</text><text class="inforright">{{item.LendNum}}\n</text>
-      <text class="inforleft">图书状态：</text><text class="inforright">{{item.State}}\n</text>
-      <text class="inforleft">图书内容：</text><text class="inforright">{{item.BooksContent}}\n</text>
-      <text class="inforleft">作者简介：</text><text class="inforright">{{item.AuthorIntro}}\n</text>
-      <text class="inforleft">目录：</text><text class="inforright">{{item.Catalogue}}</text>
-
-  </view> -->
-
-
   <view class="cart-list1">
     <view wx:for="{{carts}}" wx:key="{{index}}" bindtap='navigatordetails' data-aid="{{item.Id}}">
       <view class="book-list">
+        <view class="footer">
+            <button wx:if="{{item.State==1}}" class="footer-all" bindtap='closing1' data-aid="{{item.Id}}">预约</button>
+          
+            <button wx:if="{{item.State==2}}" class="footer-left" bindtap='closing1' data-aid="{{item.Id}}">预约</button>
+          
+            <button wx:if="{{item.State==2}}" class="footer-left" bindtap='closing2' data-aid="{{item.Id}}">购买</button>
+          
+            <button wx:if="{{item.State==3}}" class="footer-all" bindtap='closing2' data-aid="{{item.Id}}">购买</button>
+          
+            <button wx:if="{{item.State==4}}" class="footer-all" bindtap='closing3' data-aid="{{item.Id}}">录入</button>        
+        </view>
+
         <view class="book-image">
           <image src="http://localhost:49590/{{item.PicturePath}}"></image>
         </view>
+
         <view class="book-info">
-        <view class="book-info-style">
-          <view>书名：{{item.BooksName}}</view>
-          <view>作者：{{item.Author}}\n</view>
-          <view>价格：￥{{item.Price}}\n</view>
-          <view>出版社信息：{{item.Message}}\n</view>
-          <view>预约的数量：{{item.LendNum}}\n</view>
-          <view>图书状态：{{item.State}}\n</view>
+          <view class="book-info-style">
+            <view>书名：{{item.BooksName}}</view>
+            <view>作者：{{item.Author}}\n</view>
+            <view>价格：￥{{item.Price}}\n</view>
+            <view>出版社信息：{{item.Message}}\n</view>
+            <view>预约的数量：{{item.LendNum}}\n</view>
+        </view>   
+        
         </view>
-      </view>
-    </view>
-      <view class="line"></view>
-    </view>
-  </view>
+          </view>
+            <view class="line"></view>
+          </view>
+        </view>
 
-
-  <view class="container">
+<view class="container">
 	<view class="container-body">
 		<view class="tab">
 
@@ -46,8 +43,8 @@
 			</view>
 
       <!-- 滑动列表体 -->
-			<view class="tab-content" style="" bindtouchstart="scrollTouchstart" bindtouchmove="scrollTouchmove" bindtouchend="scrollTouchend" style="width: {{tabnav.tabnum*100}}%;transform:translateX(-{{showtab*100/tabnav.tabnum}}%);margin-left: {{marginleft}}px;">			
-						<view class="tab-panel">
+		<view class="tab-content" style="" bindtouchstart="scrollTouchstart" bindtouchmove="scrollTouchmove" bindtouchend="scrollTouchend" style="width: {{tabnav.tabnum*100}}%;transform:translateX(-{{showtab*100/tabnav.tabnum}}%);margin-left: {{marginleft}}px;">			
+				<view class="tab-panel">
 					<view class="test-list">
 					  <view class="book-content">
             <view wx:for="{{carts}}" wx:key="{{index}}" bindtap='navigatordetails' data-aid="{{item.Id}}">
@@ -99,7 +96,3 @@
 		</view>
 	</view>
 </view>
-<!-- 
-  <view class="footer">
-    <button class="footer-add" formType="delivery_is_default" bindtap="bindbtn">保存</button>
-  </view> -->
