--- a/Iyby/pages/zparticulars/particulars.wxss
+++ b/Iyby/pages/zparticulars/particulars.wxss
@@ -120,3 +120,21 @@
 	background: #2e9c60;
 	transition: all 0.3s;
 }
+
+.footer {
+  width: 100%;
+  height: 50px;
+  position: fixed;
+  bottom: 0;
+  z-index: 999;
+}
+
+.footer-all{
+  float: left;
+  width: 90%;
+}
+
+.footer-left{
+  float: left;
+  width: 45%;
+}
